fixed and added some calc code

--- a/Calculator/calcht.html
+++ b/Calculator/calcht.html
@@ -25,12 +25,14 @@
         <td id="btn5">5</td>
         <td id="btn6">6</td>
         <td id="btnsub">-</td>
+        <td id="divide">/</td>
         <td id="cleara">C</td>
     </tr>
 <tr>  <td id="btn1">1</td>
     <td id="btn2">2</td>
     <td id="btn3">3</td>
     <td id="btn0">0</td>
+    <td id="dec">.</td>
     <td id="esign">=</td>
 </tr>
     </table>
